name:                bullet-push
version:             0.3.1.0
license:             GPL-3
license-file:        LICENSE
author:              Markus Hauck
maintainer:          markus1189@gmail.com
build-type:          Simple
cabal-version:       >=1.10

library
  ghc-options:         -Wall
  exposed-modules:     Network.BulletPush
  build-depends:       aeson
                     , base >= 4.5 && < 4.9
                     , bytestring
                     , directory
                     , http-client
                     , http-types
                     , lens
                     , lens-aeson
                     , mime-types
                     , text
                     , transformers
                     , unordered-containers
                     , wreq

  default-language:    Haskell2010

executable bullet-push
  main-is:             BulletPush.hs
  ghc-options:         -Wall
  hs-source-dirs:      main
  build-depends:       base >=4.5 && <4.9
                     , bullet-push
                     , directory
                     , filepath
                     , mtl
                     , optparse-applicative
                     , retry
                     , text
                     , transformers

  default-language:    Haskell2010