name:                bullet-push
version:             0.3.2.1
synopsis:            bullet-push - the Haskell pushbullet client
description:         bullet-push is a commandline client for Pushbullet.
category:            Tools
license:             GPL-3
license-file:        LICENSE
author:              Markus Hauck
maintainer:          markus1189@gmail.com
build-type:          Simple
cabal-version:       >=1.10

source-repository head
  type: git
  location: git://github.com/markus1189/bullet-push.git

library
  ghc-options:         -Wall
  exposed-modules:     Network.BulletPush
  build-depends:       aeson
                     , base >= 4.5 && < 4.9
                     , bytestring
                     , directory
                     , exceptions
                     , http-client
                     , http-types
                     , lens
                     , lens-aeson
                     , mime-types
                     , text
                     , transformers
                     , unordered-containers
                     , wreq

  default-language:    Haskell2010

executable bullet-push
  main-is:             BulletPush.hs
  ghc-options:         -Wall
  hs-source-dirs:      main
  build-depends:       base >=4.5 && <4.9
                     , bullet-push
                     , bytestring
                     , directory
                     , fast-logger
                     , filepath
                     , monad-logger
                     , mtl
                     , optparse-applicative
                     , retry
                     , text
                     , transformers

  default-language:    Haskell2010